# RPi-pico-projects

./: README.md
micropython/: README.md
micropython/PIR_sensor_control_OLED_module/Program/: PIR_OLED_control.py
micropython/reaction_time_game/Program/: ReactionGame_v1.py  ReactionGame_v2.py
micropython/robot pathfinder/: robo_with_Astar.py
micropython_learning/: README.md  project_info.md
micropython_learning/PIR_sensor_control_OLED_module/Program/: PIR_OLED_control.py
pico-c++/: CMakeLists.txt  main.c
pico-c++/PIR_sensor_control_button/: .gitignore  CMakeLists.txt  README.md  header.h  main.c
pico-c++/PIR_sensor_control_button/Program (flash)/: PIRprogram.uf2
pico-c++/freeRTOS_comp_sim/: CMakeLists.txt  README.md  main.c
pico_to_PLC/: readme.md
pico_to_PLC/plc-learning-project/: PLCprojects_arduino.ino  POUS.h  POUS2.h  Resource1.c  config.c  iec_std_lib.c  iec_types.h  plc_ioconfig.cpp
pico_to_PLC/plc-learning-project/PLCprojects_arduino/: iec_std_FB.c  iec_std_FB.h  iec_std_functions.h  iec_std_lib.h
robot pathfinder/: robo_with_Astar.py
